--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,6 +9,26 @@
     "theme_color": "#4CAF50",
     "icons": [
         {
+            "src": "favicon.ico",
+            "sizes": "16x16 32x32",
+            "type": "image/x-icon"
+        },
+        {
+            "src": "assets/icons/favicon-16x16.png",
+            "sizes": "16x16",
+            "type": "image/png"
+        },
+        {
+            "src": "assets/icons/favicon-32x32.png",
+            "sizes": "32x32",
+            "type": "image/png"
+        },
+        {
+            "src": "assets/icons/apple-touch-icon.png",
+            "sizes": "180x180",
+            "type": "image/png"
+        },
+        {
             "src": "assets/icons/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
